HelloWorld/force-app/main/default/objects/Pharma_product__c/Pharma_product__c.object-meta.xml
<CustomObject>
    <label>Pharma product</label>
    <nameField>
        <label>Pharma products Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Pharma products</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>