HelloWorld/force-app/main/default/objects/Pharma_product__c/fields/Business_type__c.field-meta.xml
<CustomField>
    <fullName>Business_type__c</fullName>
    <label>Business type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Local</fullName>
            </value>
            <value>
                <fullName>Private</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>