HelloWorld/force-app/main/default/objects/Pharma_product__c/fields/Product_Sepc__c.field-meta.xml
<CustomField>
    <fullName>Product_Sepc__c</fullName>
    <label>Product Sepc</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>