HelloWorld/force-app/main/default/objects/Pharma_product__c/fields/Sub_category__c.field-meta.xml
<CustomField>
    <fullName>Sub_category__c</fullName>
    <label>Sub category</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Category__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Small 1</fullName>
            </value>
            <value>
                <fullName>Small 2</fullName>
            </value>
            <value>
                <fullName>Small 3</fullName>
            </value>
            <value>
                <fullName>Medium 1</fullName>
            </value>
            <value>
                <fullName>Medium 2</fullName>
            </value>
            <value>
                <fullName>Medium 3</fullName>
            </value>
            <value>
                <fullName>Large 1</fullName>
            </value>
            <value>
                <fullName>Large 2</fullName>
            </value>
            <value>
                <fullName>large 3</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>