HelloWorld/force-app/main/default/objects/Pharma_product__c/fields/Total_sample_qty__c.field-meta.xml
<CustomField>
    <fullName>Total_sample_qty__c</fullName>
    <label>Total sample qty</label>
    <summarizedField>Sample__c.Quantity__c</summarizedField>
    <summaryForeignKey>Sample__c.Pharma_product__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>